--- a/index.html
+++ b/index.html
@@ -169,12 +169,12 @@
   <div class="container about-container">
     <div class="about-photos">
       <div class="photo-container">
-        <img src="./img/1.jpg" alt="Photo 1" class="about-photo top-left">
+        <!--<img src="./img/1.jpg" alt="Photo 1" class="about-photo top-left">-->
         <div class="center-photo-container">
           <img src="./img/2.jpg" alt="Photo 2" class="about-photo center">
           <div class="hover-text">I'm Soorya</div>
         </div>
-        <img src="./img/3.jpg" alt="Photo 3" class="about-photo bottom-right">
+        <!--<img src="./img/3.jpg" alt="Photo 3" class="about-photo bottom-right">-->
       </div>
     </div>
     <div class="about-details">
