--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
       <div class="photo-container">
         <!--<img src="./img/1.jpg" alt="Photo 1" class="about-photo top-left">-->
         <div class="center-photo-container">
-          <img src="./img/2.jpg" alt="Photo 2" class="about-photo center">
+          <img src="./img/2.jpg" alt="Photo 2" class="about-photo center" style="width: 500px;height: 500px;">
           <div class="hover-text">I'm Soorya</div>
         </div>
         <!--<img src="./img/3.jpg" alt="Photo 3" class="about-photo bottom-right">-->
