--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
   <!-- Hero Section -->
 <section id="hero" class="hero">
   <div class="container hero-container">
-    <img src="./img/IMG_3263.JPG" alt="Soorya D." class="profile-pic">
+    <img src="./IMG_3263.JPG" alt="Soorya D." class="profile-pic">
     <div class="hero-content">
       <h1>Hello, I'm</h1>
       <h1>Soorya D </h1>
